kustomize/base/ingress.yml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: example-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
   
spec:
  defaultBackend:
#    service:
#      name: grafanaservice
#      port:
#        number: 8484
  rules:
   
    - host: cisco.grafana.com
   
      http:
   
        paths:
   
          - path: /graf(/|$)(.*)
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: grafanaservice
   
                port:
   
                  number: 8484
